trying to fix overflow text in contact section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,7 +124,7 @@ img {
   margin: auto;
 }
 
-.contact-section .col-md {
+.contact-section .col-sm {
   text-align: center;
   border-style: solid;
   border-width: thin;
